--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,12 @@
 body{
     margin: 0;
     padding: 0;
-    background:#3d3e36;
+}
+.background-color{
+    background:#fff;
+}
+.background-color1{
+    background:#000;
 }
 
 .float-left{
@@ -26,17 +31,22 @@ body{
     clear:both;
 }
 .col-mos{
-    color:#fff;
+    color:#000;
 }
 .col-mos-op{
-    color:rgba(255, 255, 255, 0.575);
+    color:rgba(69, 62, 62, 0.58);
+}
+.border-cicle{
+    border:1px solid rgba(0, 0, 0, 0.5);
+}
+.border-bottom{
+    border-bottom:1px solid rgba(0,0, 0, 0.5);
 }
 /* start HEADER config */
 header#header{
    width:100%;
    height: 16vh;
-   background:#3d3e36;
-   border-bottom:1px solid rgba(255, 255, 255, 0.15);
+   background:#fff;
 }
 header#header nav{
     width:100%;
@@ -81,7 +91,6 @@ header#header nav .nav-bar .con-list .menu a {
     display:inline-block;
     width: 32px;
     height:32px;
-    border:1px solid rgba(255, 255, 255, 0.4);
     border-radius:50%;
     margin-right: 8px; /*change in the rtl */
     position:relative;
@@ -92,7 +101,6 @@ header#header nav .nav-bar .con-list .menu a span{
     display:inline-block;
     width:50%;
     height: 2px;
-    background:#fff;
     position:absolute;
     left: 50%;
     margin-left:-8px;
@@ -100,7 +108,7 @@ header#header nav .nav-bar .con-list .menu a span{
 
 }
 header#header nav .nav-bar .con-list .menu a span:nth-child(1) {
-    top:35%;
+    top:34%;
 }
 header#header nav .nav-bar .con-list .menu a span:nth-child(2) {
     top:65%;
@@ -109,7 +117,6 @@ header#header nav .nav-bar .con-list .menu a span:nth-child(2) {
 header#header nav .nav-bar .con-list ul{
     margin:0;
     padding:0;
-    background:#3d3e36;
     width: 592%;
     height: 0; /* change for show the menu to 16vh */
     position:absolute;
@@ -123,7 +130,6 @@ header#header nav .nav-bar .con-list ul{
 }
 header#header nav .nav-bar .con-list ul li a{
     text-decoration:none;
-    color:#fff;
 
 }
 header#header nav .nav-bar .catalog {
@@ -164,9 +170,7 @@ header#header nav .other .search a{
     margin-right:8px;/*change in rtl */
     text-align:center;
     line-height:32px;
-    border:1px solid rgba(255, 255, 255, 0.4);
     border-radius: 50%;
-    color:#fff;
     font-size: 12px;
 
 }
@@ -182,7 +186,7 @@ header#header nav .other .search input{
 }
 header#header nav .other .pay {
     width:40%;
-    background-color: #32332c;
+    background-color: #747473a3;
     padding: 8px;
     border-radius:16px;
     text-align: center;
@@ -209,7 +213,6 @@ header#header nav .other .pay i{
 .our-product{
     width:100%;
     height: 75vh;
-    border-bottom:1px solid rgba(255, 255, 255, 0.15);
     overflow:hidden;
     position:relative;
     box-sizing:border-box;
@@ -304,7 +307,6 @@ header#header nav .other .pay i{
    width:32px;
    height:32px;
    border-radius:50%;
-   border:1px solid rgba(255, 255, 255, 0.4);
    margin-right:8px;/*change in rtl */
    text-align: center;
    line-height:32px;
@@ -399,7 +401,18 @@ header#header nav .nav-bar .con-list .menu a span:nth-child(2).meclose2{
         padding: 18px 32px;
         
     }
-
+     /* start section for product  */
+    .our-product{
+        height:100vh;
+    }
+    .our-product .product-slide .left-box, .right-box{
+        width:100%;
+        height:auto;
+    }
+    .our-product .product-slide .center-box{
+        width:100%;
+        height:29vh;
+    }
 }
 
 
